Removed custom Logger in favour of slf4j.