@@ -2,10 +2,10 @@ package com.athaydes.jgrab.runner;
 
 import com.athaydes.jgrab.Dependency;
 import com.athaydes.jgrab.ivy.IvyGrabber;
-import com.athaydes.jgrab.log.Logger;
 import com.athaydes.osgiaas.api.env.ClassLoaderContext;
 import com.athaydes.osgiaas.javac.internal.DefaultClassLoaderContext;
 import com.athaydes.osgiaas.javac.internal.compiler.OsgiaasJavaCompilerService;
+import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.io.File;
@@ -31,6 +31,8 @@ import java.util.stream.Stream;
  * Runs a Java file, using the JGrab annotations to find its dependencies.
  */
 public class JGrabRunner {
+
+    private static final Logger logger = LoggerFactory.getLogger( JGrabRunner.class );
 
     private static final String JGRAB_LIB_DIR = "jgrab-libs";
 
@@ -61,12 +63,13 @@ public class JGrabRunner {
 
         Path tempDir = getTempDir();
 
-        Logger.log( "JGrab using directory: " + tempDir );
+        logger.debug( "JGrab using directory: {}", tempDir );
 
         JavaFileHandler javaFile = new JavaFileHandler( Paths.get( options.arg ) );
 
         List<Dependency> toGrab = javaFile.extractDependencies();
-        Logger.log( "Dependencies: " + toGrab );
+        logger.debug( "Dependencies to grab: {}", toGrab );
+
         File libDir = new File( tempDir.toFile(), JGRAB_LIB_DIR );
 
         if ( !toGrab.isEmpty() ) {
@@ -82,22 +85,22 @@ public class JGrabRunner {
                 new JGrabClassLoaderContext( libs );
 
         Class<Object> compiledClass = new OsgiaasJavaCompilerService()
-                .compileJavaClass( classLoaderContext, className, javaFile.getCode(), Logger.asPrintStream() )
+                .compileJavaClass( classLoaderContext, className, javaFile.getCode(), System.err )
                 .orElseThrow( () -> new RuntimeException( "Java file compilation failed" ) );
 
         if ( Runnable.class.isAssignableFrom( compiledClass ) ) {
             try {
-                Runnable runnable = ( Runnable ) compiledClass.newInstance();
+                Runnable runnable = ( Runnable ) compiledClass.getDeclaredConstructor().newInstance();
                 runnable.run();
             } catch ( Throwable t ) {
-                Logger.error( "Problem running Java class: " + t );
+                logger.warn( "Problem running Java class", t );
             }
         } else {
             try {
                 Method method = compiledClass.getMethod( "main", String[].class );
                 method.invoke( compiledClass, ( Object ) new String[ 0 ] );
             } catch ( Throwable t ) {
-                Logger.error( "Problem running Java class: " + t );
+                logger.warn( "Problem running Java class", t );
             }
         }
 
@@ -202,8 +205,7 @@ public class JGrabRunner {
         try {
             run( options );
         } catch ( Exception e ) {
-            e.printStackTrace();
-            Logger.error( e.toString() );
+            logger.error( "Unable to run Java class", e );
         }
     }
 
